--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "casq"
+name = "profkit"
 version = "0.1.0"
 description = ""
-authors = ["Sinan Inel <sinan.inel@aalto.fi>"]
+authors = ["Sinan Inel <sinan.inel@farsimple.com>"]
 license = "Apache 2.0 License"
 readme = "README.md"
-homepage = "https://github.com/sinel/casq"
+homepage = "https://github.com/sinel/profkit"
 packages = [{ include = "src" }]
 
 [tool.poetry.dependencies]
@@ -47,7 +47,7 @@ order_by_type = true
 use_parentheses = true
 force_sort_within_sections = true
 reverse_relative = true
-known_first_party = "quaint"
+known_first_party = "profkit"
 src_paths = ["src", "tests"]
 
 [tool.mypy]
