--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,22 @@ jupyter = "^1.0.0"
 jupyter-sphinx = "^0.4.0"
 loguru = "^0.7.0"
 matplotlib = "^3.7.0"
+pydantic = "^2.1.1"
+pydantic-settings = "^2.0.2"
+pydantic-yaml = "^1.1.1"
 pydata-sphinx-theme = "^0.13.3"
-python = "^3.11"
+pyinstrument = "^4.5.1"
+python = ">=3.11,<3.12"
 sphinx = "^7.0.1"
 sphinx-autoapi = "^2.1.1"
+sphinx-copybutton = "^0.5.2"
 sphinx-favicon = "^1.0.1"
 wonderwords = "^2.2.0"
-sphinx-copybutton = "^0.5.2"
+yappi = "^1.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.3.0"}
-flake8 = "^6.0.0"
 isort = "^5.12.0"
-flake8-docstrings = "^1.6.0"
 mypy = "^1.3.0"
 pre-commit = "^3.3.2"
 pytest-cov = "^4.1.0"
@@ -68,7 +71,9 @@ enable_incomplete_feature="Unpack"
 module = [
     "matplotlib.*",
     "mpl_toolkits.*",
-    "wonderwords.*"
+    "ruamel.*",
+    "wonderwords.*",
+    "yappi.*"
 ]
 ignore_missing_imports = true
 
